--- a/config/config.json
+++ b/config/config.json
@@ -16,9 +16,9 @@
   "database" :
   {
     "_comment" : "how should the backend connect to the mysql database",
-    "url"      : "127.0.0.1.",
+    "url"      : "127.0.0.1",
     "port"     : 3306,
-    "dbname"   : "name",
+    "dbname"   : "webwalletdb",
     "user"     : "user",
     "password" : "password"
   },
